# MIA_Hand_Human_Bionics_And_Prosthetics

./: .gitmodules  README.md
Python/: MUJOCO_LOG.TXT  depthCamera.py  depthCameraYolo.py  mia_hand_EMG_physical.py  mia_hand_advanced_physical.py  mia_hand_advanced_simulation.py  mia_hand_full_ai_physical.py  mia_hand_full_physical.py  mia_hand_full_simulation.py  mia_hand_grasp_control_physical.py  mia_hand_grasp_control_simulation.py  mia_hand_wrist_control_physical.py  receive_command.py  voiceTechnology.py  wrist_control_advanced_physical.py  wrist_control_physical.py
src/mia_hand_ros2_pkgs/: .gitignore
src/mia_hand_ros2_pkgs/docker-deployment/: Dockerfile  README.md  docker-compose.yml  ros_entrypoint.sh
src/mia_hand_ros2_pkgs/mia_hand_description/: CMakeLists.txt  README.md  package.xml
src/mia_hand_ros2_pkgs/mia_hand_description/calibration/: joint_limits_default.yaml  transmission_config_default.yaml
src/mia_hand_ros2_pkgs/mia_hand_description/include/mia_hand_description/: rviz2_joint_state_publisher.hpp  thumb_joint_opposition.hpp
src/mia_hand_ros2_pkgs/mia_hand_description/launch/: mia_hand_rviz_launch.py
src/mia_hand_ros2_pkgs/mia_hand_description/rviz/: mia_hand_config.rviz
src/mia_hand_ros2_pkgs/mia_hand_description/src/: rviz2_joint_state_publisher_node.cpp
src/mia_hand_ros2_pkgs/mia_hand_description/src/mia_hand_description/: rviz2_joint_state_publisher.cpp  thumb_joint_opposition.cpp
src/mia_hand_ros2_pkgs/mia_hand_description/urdf/: mia_hand.urdf.xacro  mia_hand_description.urdf.xacro  mia_hand_left.urdf.xacro  mia_hand_on_ur_flange.urdf.xacro  mia_hand_right.urdf.xacro
src/mia_hand_ros2_pkgs/mia_hand_description/urdf/inc/: joint_limits.xacro
src/mia_hand_ros2_pkgs/mia_hand_driver/: CMakeLists.txt  Doxyfile  README.md  package.xml
src/mia_hand_ros2_pkgs/mia_hand_driver/doc/html/: graph_legend.html  index.html
src/mia_hand_ros2_pkgs/mia_hand_driver/doc/latex/: refman.tex
src/mia_hand_ros2_pkgs/mia_hand_driver/include/mia_hand_driver/: cpp_driver.hpp  ros_driver.hpp
src/mia_hand_ros2_pkgs/mia_hand_driver/launch/: mia_hand_driver_launch.py
src/mia_hand_ros2_pkgs/mia_hand_driver/src/: mia_hand_driver_node.cpp
src/mia_hand_ros2_pkgs/mia_hand_driver/src/mia_hand_driver/: cpp_driver.cpp  ros_driver.cpp
src/mia_hand_ros2_pkgs/mia_hand_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/mia_hand_ros2_pkgs/mia_hand_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mia_hand_mujoco.urdf.xacro  mia_hand_robot.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml
src/mia_hand_ros2_pkgs/mia_hand_moveit_config/launch/: mia_hand_moveit.launch.py  setup_assistant.launch.py
src/mia_hand_ros2_pkgs/mia_hand_moveit_config/rviz/: mia_hand_moveit.rviz
src/mia_hand_ros2_pkgs/mia_hand_moveit_config/srdf/: mia_hand_macro.srdf.xacro  mia_hand_srdf.xacro
src/mia_hand_ros2_pkgs/mia_hand_msgs/: CMakeLists.txt  README.md  package.xml
src/mia_hand_ros2_pkgs/mia_hand_msgs/action/: Grasp.action  JointTraj.action  MotorTraj.action
src/mia_hand_ros2_pkgs/mia_hand_msgs/msg/: ForceData.msg  JointData.msg  MotorData.msg
src/mia_hand_ros2_pkgs/mia_hand_msgs/srv/: Connect.srv  ExecuteGrasp.srv  GetForceData.srv  GetGraspReferences.srv  GetJointData.srv  GetMotorData.srv  SetGraspReferences.srv  SetJointSpeed.srv  SetJointTraj.srv  SetMotorSpeed.srv  SetMotorTraj.srv
src/mia_hand_ros2_pkgs/mia_hand_mujoco/: CMakeLists.txt  README.md  mia_hand_mujoco.xml  package.xml
src/mia_hand_ros2_pkgs/mia_hand_mujoco/config/: mia_hand_controllers.yaml
src/mia_hand_ros2_pkgs/mia_hand_mujoco/description/ros2_control/: mia_hand_mujoco.ros2_control.xacro
src/mia_hand_ros2_pkgs/mia_hand_mujoco/description/urdf/: mia_hand_system_interface.urdf.xacro
src/mia_hand_ros2_pkgs/mia_hand_mujoco/include/mia_hand_mujoco/: simulator.hpp  system_interface.hpp
src/mia_hand_ros2_pkgs/mia_hand_mujoco/launch/: mia_hand_system_interface_launch.py
src/mia_hand_ros2_pkgs/mia_hand_mujoco/mia_hand/: README.md  mia_hand_left.xml  mia_hand_right.xml  scene_bimanual.xml  scene_left.xml  scene_right.xml
src/mia_hand_ros2_pkgs/mia_hand_mujoco/mia_hand/plugin/: CMakeLists.txt
src/mia_hand_ros2_pkgs/mia_hand_mujoco/mia_hand/plugin/include/mia_hand_mujoco/plugin/: index_thumb_actuator.h
src/mia_hand_ros2_pkgs/mia_hand_mujoco/mia_hand/plugin/src/: index_thumb_actuator.cc  register.cc
src/mia_hand_ros2_pkgs/mia_hand_mujoco/src/mia_hand_mujoco/: simulator.cpp  system_interface.cpp
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/: CMakeLists.txt  README.md  mia_hand_ros2_control.xml  package.xml
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/config/: mia_hand_controllers.yaml  test_joint_trajectory_controller.yaml
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/description/ros2_control/: mia_hand.ros2_control.xacro
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/description/urdf/: mia_hand_system_interface.urdf.xacro
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/include/mia_hand_ros2_control/: mia_hand_system_interface.hpp
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/launch/: mia_hand_system_interface_launch.py  test_joint_trajectory_controller.launch.py
src/mia_hand_ros2_pkgs/mia_hand_ros2_control/src/mia_hand_ros2_control/: mia_hand_system_interface.cpp
src/mia_hand_ros2_pkgs/mia_hand_ros2_pkgs/: CMakeLists.txt  package.xml
