<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>mia_hand_description</name>

  <version>1.0.0</version>

  <description>
  	Package providing Mia Hand URDF and joints state publisher.
	</description>

  <author email="andreabu@prensilia.com">Andrea Burani</author>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>BSD-3-Clause</license>

  <!-- <url type="website">https://wiki.ros.org/mia_hand_ros2_pkgs</url> -->
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros2_pkgs.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>joint_limits</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
