<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>mia_hand_driver</name>

  <version>1.0.0</version>

  <description>
  	Package for driving Mia Hand devices.
	</description>

  <author email="andreabu@prensilia.com">Andrea Burani</author>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>BSD-3-Clause</license>

  <!-- <url type="website">https://wiki.ros.org/mia_hand_ros2_pkgs</url> -->
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros2_pkgs.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>mia_hand_msgs</depend>
  <depend>std_srvs</depend>
  <depend>libserial-dev</depend>

  <exec_depend>ros2launch</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
