<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>mia_hand_msgs</name>

  <version>1.0.0</version>

  <description>
  	Package containing Mia Hand msg, srv and action files.
	</description>

  <author email="andreabu@prensilia.com">Andrea Burani</author>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>BSD-3-Clause</license>

  <!-- <url type="website">https://wiki.ros.org/mia_hand_ros_pkgs</url> -->
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros2_pkgs.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
