<?xml version="1.0"?>

<package format="2">

  <name>mia_hand_ros2_pkgs</name>

  <version>1.0.0</version>

  <description>
      Package for grouping all Mia Hand ROS2 packages.
  </description>

  <author email="andreabu@prensilia.com">Andrea Burani</author>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>3-Clause BSD</license>

  <!-- <url type="website">https://wiki.ros.org/mia_hand_ros2_pkgs</url> -->
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros2_pkgs.git</url>

  <exec_depend>mia_hand_driver</exec_depend>
  <exec_depend>mia_hand_msgs</exec_depend>
  <exec_depend>mia_hand_description</exec_depend>
  <exec_depend>mia_hand_ros2_control</exec_depend>
  <exec_depend>mia_hand_mujoco</exec_depend>
  <exec_depend>mia_hand_moveit_config</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
